--- a/base.css
+++ b/base.css
@@ -42,6 +42,7 @@ header{
     background: #0F1C75;
     position: fixed;
     width: 100%;
+    z-index: 1000;
 }
 .scroll-btn{
     position:fixed;
@@ -61,7 +62,7 @@ header{
     font-size: 14px;
     font-weight: 700;
     line-height: 120px;
-    padding: 10px 5px;
+    padding: 10px 0px;
 }
 .main-menu a:hover{
     color: azure;
@@ -272,7 +273,7 @@ footer p{
 {
     height: 17px;
     width: 17px;
-    background-color: #1290a4;
+    background-color: #0F1C75;
     border-radius: 50%;
     display: inline-block;
     position: absolute;
