--- a/base.css
+++ b/base.css
@@ -54,8 +54,9 @@ header{
 .main-menu{
     display: flex;
     justify-content: space-between;
+
 }
-.main-menu a{
+.menu-item{
     text-decoration: none;
     text-transform: uppercase;
     color: #909090;
@@ -64,11 +65,9 @@ header{
     line-height: 120px;
     padding: 10px 0px;
 }
-.main-menu a:hover{
-    color: azure;
-    border-top: 1px solid silver;
-    border-bottom: 1px solid silver;
-    border-radius: 4px;
+.menu-item:hover{
+    text-decoration: underline;
+
 }
 .logo{
     margin-top: 3px;
@@ -89,7 +88,7 @@ header{
     vertical-align: middle;
 }
 main{
-    background-color: #4b4b4b;
+    background-color: #181d23;
 }
 .smart-contract{
     height: 300px;
@@ -98,6 +97,16 @@ main{
     align-items: center;
     justify-content: space-evenly;
 }
+.link{
+    width: 700px;
+    background-color: transparent;
+    border: none;
+    color: silver;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+
 .title{
     color: #0F1C75;
     text-transform: uppercase;
@@ -117,14 +126,41 @@ main{
 .copy-btn:hover{
     background-color: #909090;
 }
+.copy-part{
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+.copied::before{
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: #0F1C75;
+    position: absolute;
+    top: 5px;
+    left: -9px;
+    transform: rotate(45deg);
+    overflow: hidden;
+}
+.copied{
+    padding: 5px 15px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-radius: 3px;
+    height: 30px;
+    background-color: #0F1C75;
+    position: absolute;
+    right: -130px;
+    margin-left: 30px;
+    line-height: 20px;
+    color: silver;
+    display: none;
+}
 .board-img{
     margin-top: 100px;
 }
-.token-line{
-    color: silver;
-    font-size: 20px;
-    
-}
+
 .token-item{
     border: #1f1f1f solid 3px;
     padding: 25px 15px;
@@ -221,12 +257,12 @@ main{
     padding: 20px 0;
 }
 .dex-guru{
-    width: 100%;
+    width: 90%;
     height: 1000px;
 }
 footer{
     height: 150px;
-    background-color: #4b4b4b;
+    background-color: #181d23;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -239,12 +275,15 @@ footer p{
 
 }
 .switcher{
-    position: absolute;
-    top: 150px;
-    right: 220px;
+    display: flex;
+    align-items: center;
+}
+.switchers{
     display: flex;
     align-items: center;
     background-color: #4b4b4b;
+    padding: 10px 5px;
+    border-radius: 5px;
 }
 .switch-btn
 {
