--- a/base.css
+++ b/base.css
@@ -39,7 +39,7 @@ body{
 }
 header{
     height: 120px;
-    background: #0F1C75;
+    background: #304797;
     position: fixed;
     top: 0px;
     width: 100%;
@@ -67,7 +67,8 @@ header{
     padding: 10px 0px;
 }
 .menu-item:hover{
-    text-decoration: underline;
+ color: #d9e4e6;
+ text-shadow: 0 0 1em #d9e4e6;
 
 }
 .logo{
@@ -82,9 +83,9 @@ header{
     padding-bottom: 40px;
 }
 .logo-img{
-    width: 70%;
+    width: 60%;
     text-align: center;
-    vertical-align: middle;
+    margin-top: 10px;
 }
 main{
     background-color: rgb(238, 238, 238);
@@ -158,13 +159,13 @@ main{
     margin-top: -10px;
 }
 .token-item:hover{
-    background-color: #666565;
+    background-color: #304797;
 }
 
 
 .properties{
     display: flex;
-    align-items:stretch;
+    margin-bottom: 30px;
 }
 .prop-item{
     height:100%;
@@ -174,6 +175,12 @@ main{
     background-color: #d9e4e6;
       
 }
+.prop-item:hover{
+    margin-top: -10px;
+    background-color: #304797;
+    
+}
+
 .prop-item img{
     width: 100%;
 }
@@ -191,19 +198,24 @@ main{
     text-align: center;
     line-height: 1.5;
 }
+.prop-item:hover .prop-description{
+    color: #ffff;
+}
 .coin-description{
-    color: #1f262f;
-    font-size: 24px;
+    color: #648bbe;
     line-height: 1.5;
-    font-weight: 800;
+    font-weight: 600;
     padding: 15px 20px;
     margin-top: 100px;
+    position:sticky;
+    font-size: 20px;
 }
 .coin-description p{
     padding: 15px 10px;
     height: 300px;
     text-align: center;
     line-height: 2;
+    margin-top: 40px;
 }
 
 .dex{
@@ -225,7 +237,7 @@ footer{
 }
 footer p{
     text-align: center;
-    color: #1f262f;
+    color: #648bbe;
     font-weight: 500;
     font-size: 16px;
 
@@ -235,11 +247,14 @@ footer p{
     align-items: center;
 }
 .telegram{
-    background-color: #4b4b4b;;
+    background-color: #909090;;
     line-height: 120px;
     border-radius: 5px;
     height: 65px;
 
+}
+.telegram-container:hover{
+    text-shadow: #d9e4e6 0 0 1em;
 }
 .switcher{
     display: flex;
@@ -249,7 +264,7 @@ footer p{
 .switchers{
     display: flex;
     align-items: center;
-    background-color: #4b4b4b;
+    background-color: #909090;
     height: 65px;
     padding: 15px 5px;
     border-radius: 5px;
@@ -288,7 +303,9 @@ footer p{
     top: 18%;
     right: 10%;
 }
-
+.slick-dots{
+    bottom: -5px;
+}
 /* XS */
 @media(max-width:576px)
 {
