--- a/base.css
+++ b/base.css
@@ -94,7 +94,7 @@ main{
 
 
 .title{
-    color: #0F1C75;
+    color: #648bbe;
     text-transform: uppercase;
     font-size: 40px;
     text-align: center;
